second to final edit